# CHANGELOG
##############

Version 0.3.*:
--------------
18: Added a new proteinortho rule that takes entire bakta output as input, not splitted
17: More nvme memory to eggnog assigned
16: Added the --skip-plot option as default to Bakta to prevent error for large MAGs (needs to be re-added later as separate step)
15: Protect the eggnog logs that they are not deleted in case of an error (could be removed after trouble shooting)
14: Added a config path to phylophlan
13: Changed bug in rule phylophlan -e was changed to --genome_extension
12: bakta uses now per default the option "--skip-crispr", as there was some unsolveable error with it (error code -6)
11: Time resource allocation for assemble_drep adjusted
10: Removed redundant rule calls from contig_assemble and avoid rerunning rules for already existing files
9: Preprocess rule output adjusted, to account for temp files
8: Decontaminated reads are now stored in a dedicated locations and other host/non-host reads are removed
7: Chromosome-wise quantification for host genomes added
6: Temporary output is now by default removed from HumanN 
5: Software requirements adjusted for installations
4: Added dedicated TMPDIR definitions to rules preprocess/ humann, metaphlan, nonpareil and singlem
3: Changed in _contigAnnotate__prodiga  sed to grep, to satisfy linter
2: Linter warnings fixed
1: Developer version (this version is similar to 0.2)

Version 0.2: First public release version (18.09.2024)
--------------