@@ -17,5 +17,6 @@ reference: "docker://fischuu/hrp_reference:0.1"
 report: "docker://fischuu/hrp_report:0.2"
 r_report: "docker://fischuu/r-gbs:4.2.1-0.7"
 subread: "docker://fischuu/subread:2.0.1-0.1"
+sylph: "docker://fischuu/sylph:0.7.0-0.1"
 vamb: "docker://fischuu/hrp_vamb:0.1"
 virify: "docker://fischuu/hrp_virify:0.1"
